logo, colores y correcciones menores

--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
+                        <!-- En tu header -->
                         <a href="#" class="logo">
-                            <img src="assets/images/logo-vyc.png" alt="Marketing V&C"/>
+                            <img src="assets/images/logo mkt.png" alt="Marketing V&C" class="logo-img">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="#welcome" class="active">Inicio</a></li>
-                            <li><a href="#features">Servicios</a></li>
                             <li><a href="#about">Nosotras</a></li>
                             <li><a href="#work-process">Metodología</a></li>
                             <li><a href="#testimonials">Clientes</a></li>
+                            <li><a href="#services">Servicios</a></li>
                             <li><a href="#others">Otros servicios</a></li>
                             <li><a href="#contact-us">Contacto</a></li>
                         </ul>
@@ -71,7 +72,7 @@
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1>Ayudamos a marcas a <strong>crecer</strong><br>y <strong>destacar</strong> en el mundo digital</h1>
                         <p>V&C es una agencia de marketing fundada por dos hermanas apasionadas por conectar marcas con su audiencia a través de estrategias creativas y efectivas.</p>
-                        <a href="#features" class="main-button-slider">Nuestros Servicios</a>
+                        <a href="#services" class="main-button-slider">Nuestros Servicios</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +162,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Nuestra Misión</h2>
+                        <h2 class="section-title">Misión y Visión</h2>
                     </div>
                     <div class="left-text">
                         <p>Impulsamos marcas con propósito a través de estrategias de marketing creativas, auténticas y personalizadas. Conectamos personas con historias, ideas con resultados, y negocios con su verdadero potencial.</p>
@@ -319,7 +320,7 @@
     <!-- ***** Testimonials End ***** -->
 
     <!-- ***** Pricing Plans Start ***** -->
-    <section class="section colored" id="pricing-plans">
+    <section class="section colored" id="services">
         <div class="container">
             <!-- ***** Section Title Start ***** -->
             <div class="row">
@@ -415,41 +416,6 @@
         </div>
     </section>
     <!-- ***** Pricing Plans End ***** -->
-
-    <!-- ***** Counter Parallax Start ***** -->
-    <section class="counter">
-        <div class="content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="count-item decoration-bottom">
-                            <strong>50+</strong>
-                            <span>Proyectos</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="count-item decoration-top">
-                            <strong>30+</strong>
-                            <span>Clientes Felices</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="count-item decoration-bottom">
-                            <strong>12</strong>
-                            <span>Premios</span>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="count-item">
-                            <strong>5</strong>
-                            <span>Años de Experiencia</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Counter Parallax End ***** -->
      <!-- ***** Blog Start ***** -->
     <section class="section" id="others">
         <div class="container">
@@ -457,7 +423,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">Blog Entries</h2>
+                        <h2 class="section-title">Otros servicios</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
@@ -522,6 +488,40 @@
     </section>
     <!-- ***** Blog End ***** -->   
 
+    <!-- ***** Counter Parallax Start ***** -->
+    <section class="counter">
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="count-item decoration-bottom">
+                            <strong>50+</strong>
+                            <span>Proyectos</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="count-item decoration-top">
+                            <strong>30+</strong>
+                            <span>Clientes Felices</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="count-item decoration-bottom">
+                            <strong>12</strong>
+                            <span>Premios</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="count-item">
+                            <strong>5</strong>
+                            <span>Años de Experiencia</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ***** Counter Parallax End ***** -->
     <!-- ***** Contact Us Start ***** -->
     <section class="section colored" id="contact-us">
         <div class="container">
@@ -545,9 +545,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <h5 class="margin-bottom-30">Contacto</h5>
                     <div class="contact-text">
-                        <p>110-220 Quisque diam odio, maximus ac consectetur eu<br>auctor non lorem</p>
-                        <p>Email: info@marketingvyc.com<br>
-                        Teléfono: +1 234 567 890</p>
+                        <p><strong>Email:<br> mkt.venegascalisto@gmail.com</strong><br></p>
+                        <p><strong>Teléfono:<br>+56 9 7247 0915</strong></p>
+                        <p>Talca - Región Metropolitana</p>
                     </div>
                 </div>
                 <!-- ***** Contact Text End ***** -->
@@ -598,16 +598,16 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
                         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
+                        <!--<li><a href="#"><i class="fa fa-pinterest"></i></a></li>-->
                     </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">© 2023 Marketing V&C. Todos los derechos reservados.</p>
+                    <p class="copyright">Marketing V&C. Todos los derechos reservados. Web por Matisandev</p>
                 </div>
             </div>
         </div>
